fix spacing of things on home page

--- a/src/assets/css/components/_ltx_document.scss
+++ b/src/assets/css/components/_ltx_document.scss
@@ -77,7 +77,13 @@
   }
 }
 
+// committee etc.
+.ltx_document .ltx_logical-block .ltx_align_center {
+    margin: 1em 0;
+}
+
 // dedication
 .ltx_document .ltx_section .ltx_align_center {
     margin: 4em 0;
+    text-indent: 0 !important;
 }
